Teste Coomit Vscode

--- a/projetos/tela-login/css/style.css
+++ b/projetos/tela-login/css/style.css
@@ -94,7 +94,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     font-size: 16px;
-    color: #333;
+    color: #5a075ad8;;
     font-weight: 600;   
 
 }
